--- a/etc/server.cfg.dist
+++ b/etc/server.cfg.dist
@@ -1,7 +1,7 @@
 main_collective = mcollective
 collectives = mcollective
-libdir = /usr/libexec/mcollective
-logfile = /var/log/mcollective.log
+libdir = /opt/puppetlabs/agent/plugins
+logfile = /var/log/puppetlabs/agent/mcollective.log
 loglevel = info
 daemonize = 1
 
@@ -18,5 +18,5 @@ plugin.activemq.pool.1.password = marionette
 
 # Facts
 factsource = yaml
-plugin.yaml = /etc/mcollective/facts.yaml
+plugin.yaml = /etc/puppetlabs/agent/mcollective/facts.yaml
 
